2004-06-12  Murray Cumming  <murrayc@murrayc.com>

	* glom/dialog_data_invalid.[h|cc}, glom.glade: New dialog to show 
	when the user enters incorrect data, with advice, and offer to revert.
	glom/utility_widgets/entryglom.cc: check_for_changes(): Show the new 
	dialog, and put the focus back in the entry if the user tries again.
	* glom/utility_widgets/adddel/adddel.cc: on_treeview_cell_edited(): 
	Do the same, though the cell is obviously not reactivated properly.
	
2004-06-12  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/entryglom.cc: check_for_change(): Complain 
	about unparseable data (such as dates and times) instead of sending 
	garbage to the database. This dialog should be improved (see comments) 
	and we need the same thing for the List view.
	
2004-06-12  Murray Cumming  <murrayc@murrayc.com>

	* Moved generic parse/format routines to 
	glom/data_structure/glomconversions.[h|cc] from 
	glom/utility_widgets/entryglom.[h|cc].
	* glom/utility_widgets/adddel/adddel.[h|cc]: Add add_column() override 
	that takes a Field. Add set_value(Gda::Value) and get_value_as_value() 
	methods that use the glomconversions.
	* glom/mode_data/box_data_list.cc: fill_from_database(), 
	on_adddel_changed(): Use the GdaValue-based AddDel API so that dates, 
	times, and numbers are shown and parsed as per the locale.
	
2004-06-12  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/flowtable_withfields.cc: Change all parsing to 
	use C++ streams and facets, and rearranged them into generic 
	conversion routines that can be used elsewhere and should be moved 
	elsewhere too. Added conversions to ISO formats, fo use in SQL 
	statments.
	* glom/data_structure/field.cc: sql(): Use these conversion routines 
	to get text representations for SQL.

2004-06-11  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/flowtable_withfields.cc: get_suitable_width(): 
	Use static locale-specific conversion function from EntryGlom to get 